--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     implementation dependencie.smartRefreshLayout
     implementation project(':common')
     implementation project(':banner')
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
 }
