--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     implementation project(':banner')
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
+    implementation 'com.github.hackware1993:MagicIndicator:1.5.0'
 }
