--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,9 +15,22 @@ android {
         packagingOptions {
             exclude 'META-INF/proguard/androidx-annotations.pro'
         }
+        multiDexEnabled true
+    }
+    signingConfigs {
+        release {
+            storeFile file("taobaoke.jks")
+            storePassword "123456"
+            keyAlias "key0"
+            keyPassword "123456"
+        }
     }
     buildTypes {
+        debug {
+            signingConfig signingConfigs.release
+        }
         release {
+            signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -47,8 +60,37 @@ dependencies {
     implementation dependencie.smartRefreshLayout
     implementation project(':common')
     implementation project(':banner')
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
     implementation 'com.github.hackware1993:MagicIndicator:1.5.0'
     implementation 'com.wang.avi:library:2.1.3'
+    implementation 'com.yanzhenjie:permission:2.0.0-rc12'
+    implementation 'com.alibaba:fastjson:1.2.9'
+    //支付
+    implementation 'com.alibaba.alipay:alipaySingle:20160825@jar'
+
+    //登陆
+    implementation 'com.ali.auth.sdk:alibabauth_core:1.1.4@jar'
+    implementation 'com.ali.auth.sdk:alibabauth_ui:1.1.4@aar'
+    implementation 'com.ali.auth.sdk:alibabauth_ext:1.1.4@jar'
+    //【可选】仅供特殊合作伙伴使用
+    implementation 'com.ali.auth.sdk:alibabauth_accountlink:1.1.4@jar'
+
+    //安全基础
+    implementation 'com.taobao.android:securityguardaar3:5.1.81@aar'
+    //【可选】安全高级，如使用了发放红包、优惠券高级功能，则必须引入
+    implementation 'com.taobao.android:securitybodyaar3:5.1.25@aar'
+
+    //Mtop网关
+    implementation 'com.taobao.android:mtopsdk_allinone_open:1.2.2.4@jar'
+
+    //applink
+    implementation 'com.taobao.android:alibc_applink:2.0.0.9@jar'
+
+    //UT
+    implementation 'com.taobao.android:utdid4all:1.1.5.3_proguard@jar'
+    implementation 'com.alibaba.mtl:app-monitor-sdk:2.5.1.3_for_bc_proguard@jar'
+
+    //电商SDK
+    implementation 'com.alibaba.sdk.android:alibc_trade_sdk:3.1.1.11@aar'
 }
