--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -172,6 +172,14 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
+
+        <activity android:name="com.ali.auth.third.ui.LoginActivity"
+
+            android:theme="@style/AlibcLoginTheme"
+
+            tools:replace="android:theme"
+
+            />
     </application>
 
 </manifest>
