--- a/MobSDK.gradle
+++ b/MobSDK.gradle
@@ -29,8 +29,8 @@ MobSDK {
             QZone {
                 id 3
                 sortId 3
-                appId "100371282"
-                appKey "aed9b0303e3ed1e27bae87c33761161d"
+                appId "101520389"
+                appKey "a7d15ec4b1b49d4b448142922dda0ffb"
                 shareByAppClient true
                 bypassApproval false
                 enable true
@@ -50,8 +50,8 @@ MobSDK {
             Wechat {
                 id 4
                 sortId 4
-                appId "wx4868b35061f87885"
-                appSecret "64020361b8ec4c99936c0e3999a9f249"
+                appId "wxcc465ec054597d38"
+                appSecret "ddfba728ea109b29525b4e35348e9950"
                 userName "gh_afb25ac019c9"
                 path "pages/index/index.html?id=1"
                 withShareTicket true
@@ -63,8 +63,8 @@ MobSDK {
             WechatMoments {
                 id 5
                 sortId 5
-                appId "wx4868b35061f87885"
-                appSecret "64020361b8ec4c99936c0e3999a9f249"
+                appId "wxcc465ec054597d38"
+                appSecret "ddfba728ea109b29525b4e35348e9950"
                 bypassApproval false
                 enable true
             }
@@ -72,8 +72,8 @@ MobSDK {
             WechatFavorite {
                 id 6
                 sortId 6
-                appId "wx4868b35061f87885"
-                appSecret "64020361b8ec4c99936c0e3999a9f249"
+                appId "wxcc465ec054597d38"
+                appSecret "ddfba728ea109b29525b4e35348e9950"
                 bypassApproval false
                 enable true
             }
