--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,26 +72,22 @@ dependencies {
     implementation 'com.github.hackware1993:MagicIndicator:1.5.0'
     implementation 'com.wang.avi:library:2.1.3'
     implementation 'com.yanzhenjie:permission:2.0.0-rc12'
-    implementation 'com.alibaba:fastjson:1.2.9'
     implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.5.0'
     implementation 'org.greenrobot:greendao:3.2.2'
     //支付
 //    implementation 'com.alibaba.alipay:alipaySingle:20160825@jar'
-
     //登陆
-    implementation 'com.ali.auth.sdk:alibabauth_core:1.1.4@jar'
-    implementation 'com.ali.auth.sdk:alibabauth_ui:1.1.4@aar'
-    implementation 'com.ali.auth.sdk:alibabauth_ext:1.1.4@jar'
+    implementation 'com.ali.auth.sdk:alibabauth_core:1.5.1.6@jar'
+    implementation 'com.ali.auth.sdk:alibabauth_ui:1.5.1.6@aar'
+    implementation 'com.ali.auth.sdk:alibabauth_ext:1.5.1.6@jar'
     //【可选】仅供特殊合作伙伴使用
-    implementation 'com.ali.auth.sdk:alibabauth_accountlink:1.1.4@jar'
-
+    implementation 'com.ali.auth.sdk:alibabauth_accountlink:1.4.2@jar'
     //安全基础
-    implementation 'com.taobao.android:securityguardaar3:5.1.81@aar'
+    implementation 'com.taobao.android:securityguardaar3:5.4.67@aar'
     //【可选】安全高级，如使用了发放红包、优惠券高级功能，则必须引入
-    implementation 'com.taobao.android:securitybodyaar3:5.1.25@aar'
-
+    implementation 'com.taobao.android:securitybodyaar3:5.4.42@aar'
     //Mtop网关
-    implementation 'com.taobao.android:mtopsdk_allinone_open:1.2.2.4@jar'
+    implementation 'com.taobao.android:mtopsdk_allinone_open:1.3.1@jar'
 
     //applink
     implementation 'com.taobao.android:alibc_applink:2.0.0.9@jar'
@@ -101,5 +97,34 @@ dependencies {
     implementation 'com.alibaba.mtl:app-monitor-sdk:2.5.1.3_for_bc_proguard@jar'
 
     //电商SDK
-    implementation 'com.alibaba.sdk.android:alibc_trade_sdk:3.1.1.11@aar'
+   implementation 'com.alibaba.sdk.android:alibc_trade_sdk:3.1.1.11@aar'
+
+
+    implementation 'com.alibaba:fastjson:1.2.9'
+    //支付
+//    implementation 'com.alibaba.alipay:alipaySingle:20160825@jar'
+//    //登陆
+//    implementation 'com.ali.auth.sdk:alibabauth_core:1.5.1.6@jar'
+//    implementation 'com.ali.auth.sdk:alibabauth_ui:1.5.1.6@aar'
+//    implementation 'com.ali.auth.sdk:alibabauth_ext:1.5.1.6@jar'
+//    //【可选】仅供特殊合作伙伴使用
+//    implementation 'com.ali.auth.sdk:alibabauth_accountlink:1.4.2@jar'
+//    //Mtop网关
+//    implementation 'com.taobao.android:mtopsdk_allinone_open:1.3.1@jar'
+//    //安全基础  V5的安全图片
+//    implementation 'com.taobao.android:securityguardaar3:5.4.67@aar'
+//    //【可选】安全高级，如使用了发放红包、优惠券高级功能，则必须引入
+//    implementation 'com.taobao.android:securitybodyaar3:5.4.42@aar'
+//    //applink
+//    implementation 'com.alibaba.sdk.android:alibc_link_partner:1.1.0.6'
+//    //UT
+//    implementation 'com.taobao.android:utdid4all:1.1.5.3_proguard@jar'
+//    implementation 'com.alibaba.mtl:app-monitor-sdk:2.5.1_for_bc_proguard@jar'
+//    //联盟SDK
+//    implementation 'com.alimama.tunion.sdk:tuniontradesdk:0.3.2'
+//    //电商SDK
+////    implementation 'com.alibaba.sdk.android:alibc_trade_common:3.1.1.210'
+////    implementation 'com.alibaba.sdk.android:alibc_trade_biz:3.1.1.210'
+//    implementation 'com.alibaba.sdk.android:alibc_trade_sdk:3.1.1.11@aar'
+
 }
